--- a/myntra-clone-frontend/index.html
+++ b/myntra-clone-frontend/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="webp" href="images/myntra_logo.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="./src/output.css" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&display=swap" rel="stylesheet">
     <title>Myntra Clone</title>
